correcting figure numbers and typos.

--- a/Paper2_PlosONE/Paper2_PlosONE-final.Rmd
+++ b/Paper2_PlosONE/Paper2_PlosONE-final.Rmd
@@ -112,7 +112,7 @@ The fishing game was part of a $~3$ hour workshop that was carried out in four C
 To make decisions in the game more realistic, each fisher earned \$COL500 (USD\$0.14) for each fish caught, in addition to a show-up fee (COL\$15000, USD\$4.3) meant to compensate for the time invested in the workshop. A day spent in the workshop meant for them a day without fishing, so their average earnings were adjusted in a way that represented a typical working wage. The full instructions of the game (English version) are available in \nameref{S1_Appendix} (\nameref{S3_Appendix} in Spanish). For a more detailed explanation of the experiment and how it relates to similar experimental designs, please see [@Schill:2019fa]. Our selection of sample in terms of the number of groups per treatment (64) was informed by a previous study with a similar experimental design performed in the lab with students at Stockholm University [@Schill:2015kj; @Lindahl:ts]. The within and between group variances, however, were higher in the field, resulting on a slightly lower power in our field data (0.74 versus 0.8).
 
 ## Surveys
-After the game, each fisher participated in a 56-question survey. Such post-experimental surveys commonly complement behavioural economic experiments both in the lab and in the field [@Anonymous:2011dla]. Our .survey is inspired by surveys we, the author team, used for previous studies [@Maldonado:2016ij; @Schill:2015kj] but adapted to our research question. The purpose of the survey was to better investigate the context in which individual decisions are taken - both with respect to the fishers’ perceptions about the game and its dynamics as well as to the fishers’ everyday reality. The survey was divided into five sections. The first section was about the game and their perceptions about the activity, for example, whether they expected the game to end when it did. The second section was about their fishing habits: how much effort they put on fishing (time per day or year), how much earnings they get in a good or bad day, whether they own and share the fishing gear, whether they fish in groups, or what are the targeted species. The third section was about traditional ecological knowledge focused on questions about abrupt changes in their fishing grounds in the past and the type of strategies they have used to cope with it. The fourth section was about cooperative activities and associations in the community. The last section included questions about demographics, socioeconomic information, and sense of place. The full questionnaire is available in \nameref{S2_Appendix}.
+After the game, each fisher participated in a 56-question survey. Such post-experimental surveys commonly complement behavioural economic experiments both in the lab and in the field [@Anonymous:2011dla]. Our survey is inspired by surveys we, the author team, used for previous studies [@Maldonado:2016ij; @Schill:2015kj] but adapted to our research question. The purpose of the survey was to better investigate the context in which individual decisions are taken - both with respect to the fishers’ perceptions about the game and its dynamics as well as to the fishers’ everyday reality. The survey was divided into five sections. The first section was about the game and their perceptions about the activity, for example, whether they expected the game to end when it did. The second section was about their fishing habits: how much effort they put on fishing (time per day or year), how much earnings they get in a good or bad day, whether they own and share the fishing gear, whether they fish in groups, or what are the targeted species. The third section was about traditional ecological knowledge focused on questions about abrupt changes in their fishing grounds in the past and the type of strategies they have used to cope with it. The fourth section was about cooperative activities and associations in the community. The last section included questions about demographics, socioeconomic information, and sense of place. The full questionnaire is available in \nameref{S2_Appendix}.
 
 ## Risk and ambiguity elicitation task
 After the survey fishers were asked to do a risk and ambiguity elicitation task [@Cardenas:2013km]. To measure risk and ambiguity aversion we asked fishers to choose two times between six binary lotteries: $13000|$13000; $10000|$19000; $7000|$25000; $4000|$31000; and $0|$38000. For risk, the chances of getting the high payoff was 0.5, while for ambiguity it was an unknown probability between 0.1-0.9. Half of the fishers started with the risk task and the other half with the ambiguity task in order to control for order effects. Their choices were transformed to a discrete variable used in our regressions that takes one if the fisher is risk or ambiguity averse (when the $13000|$13000 lottery was chosen), and six when the fisher is risk or ambiguity keen (when the $0|$38000 lottery was chosen). The payoffs from the risk and ambiguity elicitation task were paid to only one fisher per group (decided by lottery).
@@ -160,13 +160,13 @@ The reduction of fishing effort is stronger for _risk_ than for _threshold_ or _
 \label{fig:fig2}
 \end{figure*}
 
-Besides the effects of treatments on the reduction of fishing effort, we find that cooperation does not break down (Fig.\ref{fig:fig1}). While these results already contradict the premise that uncertainty breaks down cooperation, our response variables thus far do not allow us to investigate the context in which each decision was taken. For example, agreements or the emergence of rules are ignored, and an amount of fish caught worth the same in the above regression if they are caught before or after crossing potential thresholds. In the game and real life they are not the same thing. The same amount of fish extracted can have substantially different impacts on the stock size and the potential earnings of fishers if non-linear thresholds are crossed (Fig \ref{fig:fig1}).
+Besides the effects of treatments on the reduction of fishing effort, we find that cooperation does not break down (Fig.\ref{fig:fig2}). While these results already contradict the premise that uncertainty breaks down cooperation, our response variables thus far do not allow us to investigate the context in which each decision was taken. For example, agreements or the emergence of rules are ignored, and an amount of fish caught worth the same in the above regression if they are caught before or after crossing potential thresholds. In the game and real life they are not the same thing. The same amount of fish extracted can have substantially different impacts on the stock size and the potential earnings of fishers if non-linear thresholds are crossed (Fig \ref{fig:fig1}).
 
 ## Fishing decisions in context
 
-To better understand what explains the behaviour of individuals in terms of cooperation and coordination, we regressed variables that summarize individual behaviour from the second part of the game against explanatory variables that were individual attributes. As dependent variables we used median cooperation, coordination, the mean extraction, the mean proportion of the stock extracted, and their variances (Fig \ref{fig:fig2}, see \nameref{S1_Fig} for correlations between response variables). Decrease in variances and increase in coordination can be seen as empirical proxies of the emergence and compliance of agreements. As explanatory variables, we used our treatments, after controlling for socioeconomic variables (e.g. education, income), risk and ambiguity aversion (See Methods), the percentage of rounds in which individuals made agreements (a proxy of the intention but not necessarily of agreement compliance), and place to account for fixed effects that were not necessarily controlled for with our socioeconomic terms. Since our experimental design focuses on the impacts of tipping points in natural resource dynamics, we approximated income not as the amount of money people make per month, but rather as the frequency of bad days (i.e. returning from a fishing trip without any earnings). The latter although collinear with reported income, is a better proxy of exposure to regime shifts. We also include a response variable about the expectation of the fisher's children to depend on fishing as livelihood to deal with the long term perspective of sustaining the resource, as well as group fishing and sharing of fishing arts to control for aspects of the fishing activity that can prime individuals to be more cooperative (shown in \nameref{S4_Table} and \nameref{S5_Table}).
+To better understand what explains the behaviour of individuals in terms of cooperation and coordination, we regressed variables that summarize individual behaviour from the second part of the game against explanatory variables that were individual attributes. As dependent variables we used median cooperation, coordination, the mean extraction, the mean proportion of the stock extracted, and their variances (Fig \ref{fig:fig3}, see \nameref{S1_Fig} for correlations between response variables). Decrease in variances and increase in coordination can be seen as empirical proxies of the emergence and compliance of agreements. As explanatory variables, we used our treatments, after controlling for socioeconomic variables (e.g. education, income), risk and ambiguity aversion (See Methods), the percentage of rounds in which individuals made agreements (a proxy of the intention but not necessarily of agreement compliance), and place to account for fixed effects that were not necessarily controlled for with our socioeconomic terms. Since our experimental design focuses on the impacts of tipping points in natural resource dynamics, we approximated income not as the amount of money people make per month, but rather as the frequency of bad days (i.e. returning from a fishing trip without any earnings). The latter although collinear with reported income, is a better proxy of exposure to regime shifts. We also include a response variable about the expectation of the fisher's children to depend on fishing as livelihood to deal with the long term perspective of sustaining the resource, as well as group fishing and sharing of fishing arts to control for aspects of the fishing activity that can prime individuals to be more cooperative (shown in \nameref{S4_Table} and \nameref{S5_Table}).
 
-We find that all treatments significantly reduced the proportion of stock that fishers extracted (Fig \ref{fig:fig3}). Individuals who played the uncertainty treatment decreased coordination, yet coordination increased in groups that reached agreements. The proportion of rounds with agreements (intentions) had a negative effect on the proportion of stock extracted, the variance of extraction, and the median and variance of cooperation suggesting that agreements were in average followed. Fishers who reached agreements were better at maximising their individual earnings while maintaining sustainable stock levels (Fig \ref{fig:fig2}). Median cooperation and its variance were only affected by the proportion of rounds people reached agreements, showing that it responds more to in-group dynamics rather than treatments or socioeconomic effects. We also found place effects that were not accounted for by our socioeconomic controls, showing that place B had on average less coordination and higher variance of extraction, while place D had higher extraction and higher cooperation ($C \leq 1$), both when compared to place A. People with higher levels of education reduced their variance of extraction, while people with a higher frequency of zero income days tend to fish more, but these effects are relatively small. Controlling for fishing art sharing, risk or ambiguity aversion render weakly significant coefficients ($p < 0.1$) and their effect sizes are relatively small together with other socioeconomic controls (\nameref{S4_Table}). Controlling for individual behaviour in the first part of the game is significant for most of our response variables (except variances \nameref{S4_Table}), suggesting that individuals bring cooperative preferences to the game that are independent of our treatments and other socio-economic factors. Some of our socio-economic factors are partially correlated with place (\nameref{S1_Fig}), thus \nameref{S5_Table} and \nameref{S6_Table} reproduce the regression without place and only place terms respectively.
+We find that all treatments significantly reduced the proportion of stock that fishers extracted (Fig \ref{fig:fig4}). Individuals who played the uncertainty treatment decreased coordination, yet coordination increased in groups that reached agreements. The proportion of rounds with agreements (intentions) had a negative effect on the proportion of stock extracted, the variance of extraction, and the median and variance of cooperation suggesting that agreements were in average followed. Fishers who reached agreements were better at maximising their individual earnings while maintaining sustainable stock levels (Fig \ref{fig:fig4}). Median cooperation and its variance were only affected by the proportion of rounds people reached agreements, showing that it responds more to in-group dynamics rather than treatments or socioeconomic effects. We also found place effects that were not accounted for by our socioeconomic controls, showing that place B had on average less coordination and higher variance of extraction, while place D had higher extraction and higher cooperation ($C \leq 1$), both when compared to place A. People with higher levels of education reduced their variance of extraction, while people with a higher frequency of zero income days tend to fish more, but these effects are relatively small. Controlling for fishing art sharing, risk or ambiguity aversion render weakly significant coefficients ($p < 0.1$) and their effect sizes are relatively small together with other socioeconomic controls (\nameref{S4_Table}). Controlling for individual behaviour in the first part of the game is significant for most of our response variables (except variances \nameref{S4_Table}), suggesting that individuals bring cooperative preferences to the game that are independent of our treatments and other socio-economic factors. Some of our socio-economic factors are partially correlated with place (\nameref{S1_Fig}), thus \nameref{S5_Table} and \nameref{S6_Table} reproduce the regression without place and only place terms respectively.
 
 
 \begin{figure*}
