--- a/Paper2_PlosONE/Supplementary_Information.Rmd
+++ b/Paper2_PlosONE/Supplementary_Information.Rmd
@@ -84,7 +84,7 @@ As announced earlier, you will receive a minimum of $\$15.000$ pesos by taking p
 
 You might ask: Why do we use money? -- We do NOT see the money you earn as a payment for taking part in this activity, nor the reason for you to be here. --- We use money because the exercise requires that you make decisions that have \underline{economic consequences}. It is to make the game realistic. Please note that if you have participated in any other economic game in the past, the game we will play today is completely different.
 
-Before we start, we would like you to sign a consent form. -- The consent form is a payment authorization that states that you are here voluntarily. Next, I will read the consent form out loud in case anyone forgot his/her glasses or have difficulties reading. \textcolor{blue}{<read consent form>}. In summary, the consent form states that you are here voluntarily. Please note that the consent form is also an agreement between you and us that you will participate in the whole activity. If you or one of the members of your group leaves before the end, neither you or your group members can finalize the activity and –  therefore – won’t receive any money. Please sing up the consent form now and the assistants will pass collecting them.
+Before we start, we would like you to sign a consent form. -- The consent form is a payment authorization that states that you are here voluntarily. Next, I will read the consent form out loud in case anyone forgot his/her glasses or have difficulties reading. \textcolor{blue}{<read consent form>}. In summary, the consent form states that you are here voluntarily. Please note that the consent form is also an agreement between you and us that you will participate in the whole activity. If you or one of the members of your group leaves before the end, neither you or your group members can finalize the activity and –  therefore – won’t receive any money. Please sign up the consent form now and the assistants will pass collecting them.
 
 ### Explain common access to a fishing ground
 
